src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AGD_Billing_Account_Count__c</fullName>
        <description>Gets the number of Billing Account with AGD unit</description>
        <label>AGD Billing Account Count</label>
        <summaryFilterItems>
            <field>Zuora__CustomerAccount__c.AGD_Unit__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Zuora__CustomerAccount__c.Zuora__Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Auto_Number__c</fullName>
        <description>Generates auto number to be copied on the Standard AccountNumber field if &quot;Generate Account Number?&quot; checkbox field is ticked.</description>
        <displayFormat>3{0000000}</displayFormat>
        <label>Account Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Account Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Acknowledgement_Letter__c</fullName>
        <label>Acknowledgement Letter</label>
        <picklist>
            <picklistValues>
                <fullName>Hard Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Airline_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Airline Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attention_Care_Off_ind__c</fullName>
        <label>Attention/Care-Off ind</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention_Required__c</fullName>
        <formula>IF( OR(Attention_Seeking_Subs__c = true , TEXT(Sub_Group__c) = &quot;VIP&quot; , Credit_Alert__c = true ), IMAGE (&quot;/servlet/servlet.FileDownload?file=015N0000000CSiT&quot;, &quot;Red&quot;) , &quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attention Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention_Seeking_Subs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User specified</description>
        <label>Attention Seeking Subs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attention_To_Care_Of_Indicator__c</fullName>
        <label>Attention To/Care Of Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attention_To_Care_Of_Salutation__c</fullName>
        <label>Attention To/Care Of Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASST. PROF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attention_To_Care_Of__c</fullName>
        <label>Attention To Care Of</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention_To__c</fullName>
        <label>Attention To</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Batch__c</fullName>
        <label>Billing Batch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <description>For populating New Billing Account in Zuora via SendToZBilling. Add to Field Set zqu__CustomAccountFields</description>
        <label>Billing Type (System Use)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <label>Building Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Nature__c</fullName>
        <description>User specified</description>
        <label>Business Nature</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <description>User specified</description>
        <label>Contact Person</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Since__c</fullName>
        <label>Date Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Executive/Managerial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic/Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Technical/Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clerical/Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradesman/Craftsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Students</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary/High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post graduate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Secondary__c</fullName>
        <label>Email (Secondary)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Batch-interfaced</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Eshop_Ref_No__c</fullName>
        <description>ARMS generated</description>
        <label>Eshop Ref No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_Invoice__c</fullName>
        <label>GST Invoice</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GST_Out_of_Scope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GST Out of Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GST_Registration_Number__c</fullName>
        <label>GST Registration Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Generate_Account_Number__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use to activate the trigger (AccountTriggerHandler)  to populate account number (standard object) from account auto number (custom fields)</description>
        <label>Generate Account Number?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HDS_Recipient_Id__c</fullName>
        <label>HDS Recipient Id</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handphone_Number__c</fullName>
        <label>Handphone Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Block_Number__c</fullName>
        <label>House/Block Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Range__c</fullName>
        <label>Income Range</label>
        <picklist>
            <picklistValues>
                <fullName>$30,000 or below</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$30,001 - $60,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$60,001 - $100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,001 - $150,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$150,001 - $200,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$200,000 &amp; above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level_Number__c</fullName>
        <label>Level Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Agent_Code__c</fullName>
        <label>Mailing Agent Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NRIC__c</fullName>
        <label>NRIC</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Extension__c</fullName>
        <label>Office Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Number__c</fullName>
        <label>Office Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Passport__c</fullName>
        <description>User specified</description>
        <label>Passport</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Letter_Batch_Run_Date__c</fullName>
        <label>Print Letter Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipient_Number__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>Recipient Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Registered_Name__c</fullName>
        <label>Registered Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks_2__c</fullName>
        <label>Remarks 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Letter__c</fullName>
        <label>Renewal Letter</label>
        <picklist>
            <picklistValues>
                <fullName>Hard Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SMS_Renewal_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Renewal Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Subscriber_Account_Number__c</fullName>
        <label>SS Subscriber Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_IVR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to IVR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Singpost_Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Postal Code</label>
        <referenceTo>Singpost_Address__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_ID__c</fullName>
        <description>User specified</description>
        <label>Staff ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is auto-populated via trigger. See Section 1.2.8.4. Apex Trigger).</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Activation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Group__c</fullName>
        <description>User specified</description>
        <label>Sub Group</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circulation Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel/Hospital 1+1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retiree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retiree CVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retiree HC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Paper Requested By Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Paper Requested By Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Paper Executive Look</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Canvasser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Of Parliament</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Of Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Paper Requested By Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SICC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzzar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arranged By Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPH Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FreeList(MY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINDEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscriber_Delivery_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber Delivery Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscriber_Name__c</fullName>
        <label>Subscriber Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefax_Number__c</fullName>
        <label>Telefax Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telephone_Number_1__c</fullName>
        <label>Telephone Number #1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone_Number_2__c</fullName>
        <label>Telephone Number #2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone_Number_3__c</fullName>
        <label>Telephone Number #3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone_Office__c</fullName>
        <label>Telephone Office</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Residence__c</fullName>
        <label>Telephone Residence</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Balance1__c</fullName>
        <description>Credit Balance field of ALL child billing account records.</description>
        <label>Total Credit Balance (Incl. Goodwill</label>
        <summarizedField>Zuora__CustomerAccount__c.Zuora__Credit_Balance__c</summarizedField>
        <summaryForeignKey>Zuora__CustomerAccount__c.Zuora__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Balance__c</fullName>
        <label>Total Credit Balance</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Goodwill_Amt__c</fullName>
        <label>Total Goodwill Amount</label>
        <summarizedField>Zuora__CustomerAccount__c.Credit_Balance_Incl_Goodwill__c</summarizedField>
        <summaryForeignKey>Zuora__CustomerAccount__c.Zuora__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unique_Entity_Number__c</fullName>
        <label>Unique Entity Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP_Email__c</fullName>
        <label>VIP/Staff Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VIP_Mobile__c</fullName>
        <label>VIP/Staff Phone Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VIP_Staff_Home_Phone__c</fullName>
        <label>VIP/Staff Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VSS_Account_Number__c</fullName>
        <label>VSS Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <label>Vendor Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Communication_Preference__c</fullName>
        <label>Vendor Communication Preference</label>
        <picklist>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Group__c</fullName>
        <label>Vendor Group</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Type__c</fullName>
        <label>Vendor Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Code__c</fullName>
        <label>Zone Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AAATest</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Vendor_Subscriber</value>
        </filters>
        <label>AAATest</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>Account_Auto_Number__c</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Vendor_Code__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Street_Name__c</columns>
        <columns>Vendor_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Vendor</value>
        </filters>
        <label>All Vendor Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Corporates</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Auto_Number__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Direct_Corporate</value>
        </filters>
        <label>All Corporates</label>
    </listViews>
    <listViews>
        <fullName>All_Individual_Subscribers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Email__c</columns>
        <columns>NRIC__c</columns>
        <columns>Passport__c</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>Level_Number__c</columns>
        <columns>Handphone_Number__c</columns>
        <columns>Eshop_Ref_No__c</columns>
        <columns>Acknowledgement_Letter__c</columns>
        <columns>Sub_Group__c</columns>
        <columns>Zuora__Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Direct_Individual</value>
        </filters>
        <label>All Individual Subscribers</label>
    </listViews>
    <listViews>
        <fullName>All_Mailing_Agents</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Mailing_Agent_Code__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Zuora__Active__c</columns>
        <columns>Active__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Mailing_Agent</value>
        </filters>
        <label>All Mailing Agents</label>
    </listViews>
    <listViews>
        <fullName>All_Subscriber_Account</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Email__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Vendor_Subscriber</value>
        </filters>
        <label>All Subscriber Account</label>
    </listViews>
    <listViews>
        <fullName>All_Vendors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Vendor_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Active__c</columns>
        <columns>Vendor_Communication_Preference__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Vendor_Subscriber</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>QA</value>
        </filters>
        <label>All Vendors</label>
    </listViews>
    <listViews>
        <fullName>MIG2_ACCOUNTS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>MIG2</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Direct_Individual</value>
        </filters>
        <label>MIG2 ACCOUNTS</label>
    </listViews>
</CustomObject>